--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,6 +38,6 @@ jobs:
         run: ls ./ -a 
             
       - name: Build with dotnet
-        run: dotnet build --configuration Release ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
+        run: dotnet build ./Week5/ClientAPITest/ --configuration Release ${{ env.AZURE_WEBAPP_PACKAGE_PATH }}
 
      
